--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
 accelerate
-bitsandbytes==0.36.0.post2
-datasets
+bitsandbytes
 diffusers==0.25.0
-ftfy==6.1.1
-huggingface-hub
-Pillow==9.4.0
-python-slugify==7.0.0
 torch
-torchvision
 transformers
